--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,10 @@ Flask-WTF==1.1.1
 WTForms==3.0.1
 PyMySQL==1.1.0
 pandas>=2.0.0,<2.2.0
-numpy>=1.24.0,<1.26.0
-matplotlib==3.7.2
+numpy>=1.26.0,<2.0.0
+matplotlib>=3.8.0,<3.9.0
 seaborn==0.12.2
-wordcloud==1.9.2
+wordcloud>=1.9.3,<2.0.0
 jieba==0.42.1
 requests==2.31.0
 python-dotenv==1.0.0
@@ -17,3 +17,4 @@ Jinja2==3.1.2
 beautifulsoup4==4.12.2
 lxml==4.9.3
 kaggle==1.5.16
+email_validator>=2.0.0,<2.1.0
